[package]
name = "cableguard-cli"
description = "an implementation of the WireGuard® protocol designed for portability and speed"
version = "0.5.2"
authors = ["Noah Kennedy <nkennedy@cloudflare.com>", "Andy Grover <agrover@cloudflare.com>", "Jeff Hiner <jhiner@cloudflare.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/cloudflare/cableguard"
documentation = "https://docs.rs/cableguard/0.5.2/cableguard/"
edition = "2021"

[dependencies]
daemonize = "0.4.1"
clap = { version = "3.1.6", features = ["env"] }
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
tracing-appender = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5.0"
base64 = "0.13.0"
curve25519-dalek = "3"
x25519-dalek = "1.1.0"
hex = "0.4.3"
sha2 = "0.9.2"
zeroize= "1.5.0"

[dependencies.cableguard]
version = "0.5.2"
path = "../cableguard"
features = ["device"]
