[package]
name = "cableguard-cli"
description = "an implementation of the an implementation of the WireGuard® protocol that uses rich online digital tokens for configuration and mutual authenticationthat uses rich online digital tokens for configuration and mutual authentication"
version = "0.90.33"
authors = [
    "Vicente Aceituno Canal <vpn@cableguard.org>",
    "Noah Kennedy <nkennedy@cloudflare.com>",
    "Andy Grover <agrover@cloudflare.com>",
    "Jeff Hiner <jhiner@cloudflare.com>",
]
license = "BSD-3-Clause"
repository = "https://github.com/alanesmizi/cgtun"
documentation = "https://docs.rs/cgtun/0.90.33/cgtun/"
edition = "2021"
readme = "README.md"
homepage = "https://cableguard.org"
keywords = ["wireguard", "vpn", "blockchain"]

[dependencies]
daemonize = "0.5.0"
clap = { version = "3.1.6", features = ["env"] }
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
tracing-appender = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5.0"
base64 = "0.13.1"
curve25519-dalek = "4.1.1"
ed25519-dalek = "2.0.0"
x25519-dalek = { version = "=2.0.0", features = [
    "reusable_secrets",
    "static_secrets",
] }
hex = "0.4.3"
sha2 = "0.10.7"
zeroize= "1.5.0"

[dependencies.cableguard]
version = "0.90.33"
path = "../cableguard"
features = ["device"]